Create AppLink and NavBar

--- a/src/app/styles/themes/dark/dark.scss
+++ b/src/app/styles/themes/dark/dark.scss
@@ -3,4 +3,9 @@
 
   --primary-color: #b3cde0;
   --secondary-color: #6497b1;
+
+  --inverted-bg-color: #b3cde0;
+
+  --inverted-primary-color: #011f4b;
+  --inverted-secondary-color: #005b96;
 }
