--- a/src/app/styles/themes/white/white.scss
+++ b/src/app/styles/themes/white/white.scss
@@ -3,4 +3,9 @@
 
   --primary-color: #011f4b;
   --secondary-color: #005b96;
+
+  --inverted-bg-color: #011f4b;
+
+  --inverted-primary-color: #b3cde0;
+  --inverted-secondary-color: #6497b1;
 }
