--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,4 +1,7 @@
 :root {
+
+  //Font
+
   --font-family-main: Consolas, 'Times New Roman', Serif;
 
   --font-size-m: 16px;
@@ -13,4 +16,8 @@
   --font-line-xl: 40px;
   --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main)
 
+
+  //Sizes
+
+  --navbar-height: 50px;
 }
